<resources>
    <string name="app_name">Drone Delivery</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="order_text">Order Drone</string>
    <string name="choose_station_text">Select a delivery station.</string>
    <string name="west_button">West Campus</string>
    <string name="center_button">Student Center</string>
    <string name="east_button">East Campus</string>
    <string name="choose_package_text">Select a package to deliver.</string>
    <string-array name="packages_array">
        <item>Modenna Disposable Face Mask Black 50Pcs</item>
        <item>EO Botanical Hand Sanitizer Gel, Lavender, 8 Ounce</item>
        <item>Terasic DE10-Lite</item>
        <item>Band-Aid Brand Flexible Fabric Adhesive Bandages for Wound Care and First Aid, Assorted Sizes, 100 Ct, Beige</item>
    </string-array>
    <string name="gtid_text">Please confirm your GTID to submit the order.</string>
    <string name="gtid_hint">GTID</string>
    <string name="submit_button_text">SUBMIT</string>
</resources>
