<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/order_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:text="@string/order_text"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/choose_station_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="68dp"
            android:text="@string/choose_station_text"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="98dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RadioButton
                android:id="@+id/west_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48sp"
                android:text="@string/west_button"
                android:buttonTint="@color/colorPrimary"/>

            <RadioButton
                android:id="@+id/center_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48sp"
                android:text="@string/center_button"
                android:buttonTint="@color/colorPrimary"/>

            <RadioButton
                android:id="@+id/east_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48sp"
                android:text="@string/east_button"
                android:buttonTint="@color/colorPrimary"/>

        </RadioGroup>

        <TextView
            android:id="@+id/choose_package_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="31dp"
            android:text="@string/choose_package_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radio_group" />

        <Spinner
            android:id="@+id/package_dropdown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:layout_marginTop="8dp"
            android:minHeight="48dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/choose_package_text"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/gtid_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="40dp"
            android:text="@string/gtid_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/package_dropdown" />

        <EditText
            android:id="@+id/gtid_editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/gtid_hint"
            android:importantForAutofill="no"
            android:inputType="number"
            android:minHeight="48dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/gtid_text" />

        <Button
            android:id="@+id/submit_order_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="88dp"
            android:text="@string/submit_button_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/gtid_editText"
            android:background="#B3A369"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</RelativeLayout>
